#41 refactor: 스트림 리스트 처리 개선